force-app/main/default/objects/CoursePaymentInfo__c/CoursePaymentInfo__c.object-meta.xml
<CustomObject>
    <label>Course Payment Info</label>
    <nameField>
        <displayFormat>CPI-{00000}</displayFormat>
        <label>Course Payment Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Payment Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>