force-app/main/default/objects/CoursePaymentInfo__c/fields/AdministratorEmail__c.field-meta.xml
<CustomField>
    <fullName>AdministratorEmail__c</fullName>
    <label>Administrator Email</label>
    <type>Email</type>
</CustomField>