force-app/main/default/objects/CoursePaymentInfo__c/fields/AdministratorName__c.field-meta.xml
<CustomField>
    <fullName>AdministratorName__c</fullName>
    <label>Administrator Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>