force-app/main/default/objects/CoursePaymentInfo__c/fields/BillingFax__c.field-meta.xml
<CustomField>
    <fullName>BillingFax__c</fullName>
    <label>Billing Fax</label>
    <type>Phone</type>
</CustomField>