force-app/main/default/objects/CoursePaymentInfo__c/fields/BillingFirstName__c.field-meta.xml
<CustomField>
    <fullName>BillingFirstName__c</fullName>
    <label>Billing First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>