force-app/main/default/objects/CoursePaymentInfo__c/fields/BillingLastName__c.field-meta.xml
<CustomField>
    <fullName>BillingLastName__c</fullName>
    <label>Billing Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>