force-app/main/default/objects/CoursePaymentInfo__c/fields/BillingPhone__c.field-meta.xml
<CustomField>
    <fullName>BillingPhone__c</fullName>
    <label>Billing Phone</label>
    <type>Phone</type>
</CustomField>