force-app/main/default/objects/CoursePaymentInfo__c/fields/CheckPOAmount__c.field-meta.xml
<CustomField>
    <fullName>CheckPOAmount__c</fullName>
    <label>Check/PO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>