force-app/main/default/objects/CoursePaymentInfo__c/fields/CheckPONumber__c.field-meta.xml
<CustomField>
    <fullName>CheckPONumber__c</fullName>
    <label>Check/PO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>