force-app/main/default/objects/CoursePaymentInfo__c/fields/InvoiceInfo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceInfo__c</fullName>
    <label>Invoice Info</label>
    <length>20</length>
    <type>Text</type>
</CustomField>