force-app/main/default/objects/CoursePaymentInfo__c/fields/InvoicingComplete__c.field-meta.xml
<CustomField>
    <fullName>InvoicingComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoicing Complete</label>
    <type>Checkbox</type>
</CustomField>